--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,25 @@
 #container{
 	width: 360px;
-	margin: 0 auto;
+	margin: 100px auto;
+	background: #f7f7f7;
+	box-shadow: 0 0 3px rgba(0,0,0,0.1);
 }
-.selected{
-	text-decoration:"line-through",
-	color:'gray'
+
+.completed{
+	text-decoration: line-through;
+	color: gray;
+
+}
+
+h1{
+	text-transform: uppercase;
+	background: #2980b9;
+	color: white;
+	margin: 0;
+	font-weight: normal;
+	font-size: 24px;
+	padding: 10px 20px;
+}
+ul{
+	list-style-type: none;
 }
